syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "aksharp.grpc"
  flat_package: true
  single_file: true
  lenses: true
};

package com.example.protos;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Yeller {
    rpc Yell (YellRequest) returns (YellReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message YellRequest {
    string message = 1;
}

message YellReply{
    string message = 1;
}
